--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.5.0/remixicon.css">
 </head>
 <body>
     
@@ -45,7 +46,16 @@
                 <img src="assets/img.png" alt="">
             </div>
         </div>
+        <div class="last-s">
+            <div class="btns-social">
+               <a href="#"><i class="ri-twitter-x-line"></i></a>
+               <a href="#"></a>
+               <a href="#"></a>
+            </div>
+        </div>
     </section>
+
+
 
 </body>
 </html>
