--- a/index.html
+++ b/index.html
@@ -49,13 +49,14 @@
         <div class="last-s">
             <div class="btns-social">
                <a href="#"><i class="ri-twitter-x-line"></i></a>
-               <a href="#"></a>
-               <a href="#"></a>
+               <a href="#"><i class="ri-facebook-fill"></i></a>
+               <a href="#"><i class="ri-instagram-line"></i></a>
+            </div>
+            <div class="btn-scroll">
+                <a href="#"><i class="ri-arrow-down-line"></i></a>
             </div>
         </div>
     </section>
-
-
 
 </body>
 </html>
